<resources>
    <string name="app_name">Fowl Language Comics</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="comicDescription">Comic description</string>
    <string name="previous">Previous</string>
    <string name="Next">Next</string>
    <string name="share">Share</string>
    <string name="new_comic_notice">New comic available!</string>
    <string name="please_wait">Please wait…</string>
    <string name="something_went_wrong">Oops. Something went wrong.</string>
    <string name="ok">OK</string>
    <string name="buy_comic">Buy comic</string>
    <string name="back">Back</string>
    <string name="bonus_panel">Bonus panel</string>
    <string name="search">Search</string>
    <string name="search_hint">Search for comics</string>
    <string name="search_hint_favorites">Search through your favorites</string>
    <string name="close_drawer">Close drawer</string>
    <string name="open_drawer">Open drawer</string>
    <string name="favorites">Favorites</string>
    <string name="shop">Shop</string>
    <string name="website">Website</string>
    <string name="about">About</string>
    <string name="brian_gordon">Brian Gordon</string>
    <string name="email_address">seriousarteest@gmail.com</string>
    <string name="choose_email_application">Send email via:</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="added_to_favorites">Added to favorites successfully!</string>
    <string name="removed_from_favorites">Removed from favorites :(</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="favorite_comics">Favorite Comics</string>
    <string name="no_favorites">You haven\'t added any favorites yet.</string>
    <string name="no_results">Uh-oh. No results to show.</string>
    <string name="comics">Comics</string>
    <string name="brian">Brian Gordon</string>
    <string name="fwl_site">www.FowlLanguageComics.com</string>
    <string name="facebook"><u>Facebook</u></string>
    <string name="twitter"><u>Twitter</u></string>
    <string name="separator">|</string>
    <string name="android_application">Android Application</string>
    <string name="vishnu">Vishnu Mohandas</string>
    <string name="vishnu_site">www.vishnu.tech</string>
    <string name="github"><u>Github</u></string>
    <string name="no_toast">No bonus panel for this comic :(</string>
    <string name="email"><u>Email</u></string>
    <string name="vishnu_email_address">vishnumohandas@gmail.com</string>
</resources>
