<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background"
              android:gravity="center"
              android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comics"
        android:textColor="@color/theme_color"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/brian"
        android:textColor="#000000"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/fwl_site"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/fwl_site"
        android:textColor="#000000"
        android:textSize="14sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fwl_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/separator"/>

        <TextView
            android:id="@+id/fwl_twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twitter"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/android_application"
        android:textColor="@color/theme_color"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/vishnu"
        android:textColor="#000000"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/vishnu_site"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/vishnu_site"
        android:textColor="#000000"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/vishnu_github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/github"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/separator"/>

        <TextView
            android:id="@+id/vishnu_xda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xda"/>
    </LinearLayout>
</LinearLayout>