<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/background"
    android:orientation="vertical"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_color"
        android:orientation="vertical"
        android:paddingBottom="12dp">

        <ImageView
            android:id="@+id/profile"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="38dp"
            android:src="@drawable/ic_launcher"
            />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/brian_gordon"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:text="@string/email_address"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="normal"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/favorites"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="14dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:gravity="bottom"
            android:src="@drawable/favorites"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:gravity="bottom"
            android:padding="0dp"
            android:text="@string/favorites"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/shop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="14dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:gravity="bottom"
            android:src="@drawable/shop"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:gravity="bottom"
            android:padding="0dp"
            android:text="@string/shop"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/website"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="14dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:gravity="bottom"
            android:src="@drawable/website"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:gravity="bottom"
            android:padding="0dp"
            android:text="@string/website"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/about"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="14dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:gravity="bottom"
            android:src="@drawable/about"/>

        <TextView
            android:id="@+id/row_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:gravity="bottom"
            android:padding="0dp"
            android:text="@string/about"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/theme_color_light"/>

    <RelativeLayout
        android:id="@+id/patreon"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/background">

        <ImageView
            android:id="@+id/patreon_arrow"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/arrow"/>

        <ImageView
            android:id="@+id/patreon_image"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/patreon"/>
    </RelativeLayout>
</LinearLayout>